# api-client-macro

./: Cargo.toml  README.md
src/: lib.rs  test.rs
